fix cmp alignment,api 2 time call issue,add min after dur,title and heading Zoom ledger, loading&nomeeting center align

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -53,7 +53,9 @@
   padding: 25px;
   margin: 0px 5px;
 }
-
+/* .card-content-center {
+  width: 100vh;
+} */
 @media only screen and (min-width: 600px) {
   .card-content-parent {
     display: grid;
